# fjage

./: .fjage-shell-history  .gitignore  .gitmodules  .travis.yml  BUILD.md  LICENSE  Makefile  README.md  Release.md  ReleaseNotes.md  build.gradle  fjage.pom  fjage.sh  index.html  package-lock.json  package.json  rconsole-rs232.sh  rconsole.sh  webpack.config.js
.github/workflows/: docs.yml  gradle.yml
doc/doctrees/: behaviors.doctree  environment.pickle  faq.doctree  fjage_quickstart.doctree  index.doctree  introduction.doctree  java.doctree  messages.doctree  quickstart.doctree  rmi.doctree  services.doctree  shell.doctree  simulation.doctree
doc/html/: .buildinfo  behaviors.html  faq.html  fjage_quickstart.html  genindex.html  index.html  introduction.html  java.html  messages.html  objects.inv  quickstart.html  rmi.html  search.html  searchindex.js  services.html  shell.html  simulation.html
docs/: _quarto.yml  _variables.yml  behaviors.qmd  cgw.qmd  faq.qmd  fjage_quickstart.sh  gateways.qmd  index.html  index.qmd  introduction.qmd  jsgw.qmd  juliagw.qmd  messages.qmd  params.qmd  protocol.qmd  pythongw.qmd  quickstart.qmd  remote.qmd  services.qmd  shell.qmd  simulation.qmd
docs/javadoc/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-frame.html  overview-summary.html  overview-tree.html  package-list  package-search-index.js  serialized-form.html  type-search-index.js
docs/jsdoc/: AgentID.html  Gateway.html  GenericMessage.html  GenericMessageMessage.html  Message.html  fjage.js.html  global.html  index.html
docs/pydocs/: .buildinfo  fjagepy.html  genindex.html  index.html  objects.inv  py-modindex.html  (+2 more)
etc/: fjageshrc.groovy  initrc-rconsole.groovy  initrc.groovy  logging.properties  unet.properties
gateways/: Gateways.md  README.md
gateways/c/: .gitignore  CMakeLists.txt  Makefile  README.md  fjage.c  fjage.h  test_fjage.c
gateways/c/src/: CMakeLists.txt  fjage.c  fjage.h  jsmn-readme.md
gateways/c/tests/: CMakeLists.txt  test_fjage.c
gateways/python/: .gitignore  LICENSE  Makefile  README.md  README.rst  example.py  pyproject.toml  setup.py  test_sync_interface.py
gateways/python/docs/: conf.py  index.rst
gateways/python/docs/api/: index.rst
gateways/python/fjagepy/: AgentID.py  Connector.py  Gateway.py  JSONMessage.py  Message.py  Performative.py  Services.py  TCPConnector.py  UUID7.py  Utils.py  __init__.py
gateways/python/test/: conftest.py  test_agentid.py  test_gateway.py  test_jsonmessage.py  test_message.py  test_shellreqs.py
javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
samples/: 01_hello.groovy  02_ticker.groovy  03_weatherRequest.groovy  03_weatherStation.groovy  04_weatherRequest.groovy  04_weatherStation.groovy  WeatherForecastReq.groovy  WeatherForecastReqMsg.groovy
vscode/: fjage-log.tmLanguage.json  language-configuration.json  package.json
(+557 files in other folders)
