[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fjagepy"
version = "2.0.0"
description = "fjage Gateway in Python"
authors = [{ name = "Chinmay Pendharkar", email = "chinmay@subnero.com" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["test"]
addopts = "-ra -q"

[project.optional-dependencies]
dev = ["pytest==8.3.5", "numpy==2.3.0", ]
docs = ["sphinx==8.2.3", "sphinx-rtd-theme==3.0.2", "myst-parser==4.0.1"]