[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fjagepy"
version = "2.0.1"
description = "fjage Gateway in Python"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [{ name = "Chinmay Pendharkar", email = "chinmay@subnero.com" }]
keywords = ["fjage", "agent", "framework", "gateway", "python"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/org-arl/fjage/tree/master/gateways/python"
Source = "https://github.com/org-arl/fjage/tree/master/gateways/python"
Issues = "https://github.com/org-arl/fjage/issues"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["test"]
addopts = "-ra -q"

[project.optional-dependencies]
dev = ["pytest==8.3.5", "numpy==2.3.0", ]
docs = ["sphinx==8.2.3", "sphinx-rtd-theme==3.0.2", "myst-parser==4.0.1"]